src/modules/error/fixtures/error.component.visual-fixture.ts
import { Component, NgModule } from '@angular/core';
import { BrowserModule } from '@angular/platform-browser';

import { SkyErrorModule } from '../error.module';

import { Bootstrapper } from '../../../../visual/bootstrapper';

@Component({
  selector: 'sky-demo-app',
  templateUrl: './error.component.visual-fixture.html'
})
class AppComponent {
}

@NgModule({
  imports: [
    BrowserModule,
    SkyErrorModule
  ],
  declarations: [
    AppComponent
  ],
  bootstrap: [
    AppComponent
  ]
})
class AppModule { }

Bootstrapper.bootstrapModule(AppModule);
